# redspec

./: .gitignore  README.md  pyproject.toml
.claude/agents/: diagram-evaluator.md  diagram-generator.md  plot-generator.md
.claude/skills/evaluate-diagram/: SKILL.md
.claude/skills/generate-diagram/: SKILL.md
.claude/skills/generate-plot/: SKILL.md
.github/actions/redspec-generate/: action.yml  entrypoint.sh
examples/: aks-nist-e2e.yaml
src/redspec/: __init__.py  __main__.py  cli.py  config.py  diff.py  exceptions.py  linter.py  watch_server.py  watcher.py
src/redspec/exporters/: __init__.py  drawio.py  mermaid.py  pdf_report.py  plantuml.py
src/redspec/generator/: __init__.py  containers.py  diff_renderer.py  edges.py  (+10 more)
tests/: conftest.py  test_cli.py  test_diff.py  test_integration.py  test_linter.py  test_models.py  test_schema.py  test_watch_server.py  test_watcher.py
tests/fixtures/: minimal.yaml  nested_containers.yaml
tests/test_exporters/: test_drawio.py  test_mermaid.py  test_pdf_report.py  test_plantuml.py
tests/test_generator/: test_containers.py  test_edges.py  test_layout.py  test_node_mapper.py  test_nodes.py  test_output_organizer.py  test_pipeline.py  test_polish.py  test_renderer.py  test_style_map.py  test_svg_animator.py  test_svg_enhancer.py  test_svg_enhancer_premium.py  test_themes.py
tests/test_icons/: test_downloader_packs.py  test_embedder.py  test_migration.py  test_multi_registry.py  test_packs.py  test_registry.py
tests/test_importers/: test_azure_graph.py
tests/test_web/: test_app.py
tests/test_yaml_io/: test_includes.py  test_interpolator.py  test_parser.py  test_scaffold.py
(+24 files in other folders)
